<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center"
    >
	<EditText 
	    android:id="@+id/et_old_pwd"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/modi_pwd_hint1"
	    android:gravity="center"
	    android:inputType="textPassword"
	    />
	<EditText 
	    android:id="@+id/et_pwd_new"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/modi_pwd_hint2"
	    android:gravity="center"
	    android:inputType="textPassword"
	    />
	<EditText 
	    android:id="@+id/et_again_new_pwd"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/modi_pwd_hint3"
	    android:gravity="center"
	    android:inputType="textPassword"
	    />
</LinearLayout>
